--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="margin-right: 0 !important">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
